force-app/main/default/objects/Education__c/Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Education SNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>