force-app/main/default/objects/Education__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>Country_State_City__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>