force-app/main/default/objects/Education__c/fields/Country_lookup__c.field-meta.xml
<CustomField>
    <fullName>Country_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>