force-app/main/default/objects/Education__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Degree/Qualification</label>
    <referenceTo>Degree__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>