force-app/main/default/objects/Education__c/fields/From_Education_Check__c.field-meta.xml
<CustomField>
    <fullName>From_Education_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in privacy setting.</description>
    <label>From Education Check</label>
    <type>Checkbox</type>
</CustomField>