force-app/main/default/objects/Education__c/fields/GPA_Scale__c.field-meta.xml
<CustomField>
    <fullName>GPA_Scale__c</fullName>
    <label>GPA Scale</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>