force-app/main/default/objects/Education__c/fields/hide__c.field-meta.xml
<CustomField>
    <fullName>hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hide</label>
    <type>Checkbox</type>
</CustomField>