force-app/main/default/objects/Education__c/fields/LastModifiedBy_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy_Profile_Name__c</fullName>
    <formula>LastModifiedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedBy Profile Name</label>
    <type>Text</type>
</CustomField>