force-app/main/default/objects/Education__c/fields/Major_Specialization_Education_Check__c.field-meta.xml
<CustomField>
    <fullName>Major_Specialization_Education_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in privacy setting.</description>
    <label>Major/Specialization Education Check</label>
    <type>Checkbox</type>
</CustomField>