force-app/main/default/objects/Education__c/fields/Name_of_School_Affiliate_with_University__c.field-meta.xml
<CustomField>
    <fullName>Name_of_School_Affiliate_with_University__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School/Institute/Campus lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>