force-app/main/default/objects/Education__c/fields/Name_of_the_University__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_University__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>University</label>
    <referenceTo>University__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>