force-app/main/default/objects/Education__c/fields/Other_Country__c.field-meta.xml
<CustomField>
    <fullName>Other_Country__c</fullName>
    <label>Other Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>