force-app/main/default/objects/Education__c/fields/Other_Degree_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Degree_Name__c</fullName>
    <label>Other Degree/Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>