force-app/main/default/objects/Education__c/fields/Other_Institute_School__c.field-meta.xml
<CustomField>
    <fullName>Other_Institute_School__c</fullName>
    <label>School/Institute/Campus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>