force-app/main/default/objects/Education__c/fields/Other_University_Board__c.field-meta.xml
<CustomField>
    <fullName>Other_University_Board__c</fullName>
    <label>Other University/Board</label>
    <length>255</length>
    <type>Text</type>
</CustomField>