force-app/main/default/objects/Education__c/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <formula>Contact__r.User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP ID</label>
    <type>Text</type>
</CustomField>