force-app/main/default/objects/Education__c/fields/School_Institute_Campus_Education_Check__c.field-meta.xml
<CustomField>
    <fullName>School_Institute_Campus_Education_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in privacy setting</description>
    <label>School/Institute/Campus Education Check</label>
    <type>Checkbox</type>
</CustomField>