force-app/main/default/objects/Education__c/fields/State_lookup__c.field-meta.xml
<CustomField>
    <fullName>State_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>