force-app/main/default/objects/Education__c/fields/Student_ID_on_Entry__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_on_Entry__c</fullName>
    <label>Student ID on Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>