force-app/main/default/objects/Education__c/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <label>University Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>