force-app/main/default/objects/Education__c/recordTypes/Online_Program.recordType-meta.xml
<RecordType>
    <fullName>Online_Program</fullName>
    <active>true</active>
    <label>Online Program</label>
</RecordType>