force-app/main/default/objects/Education__c/validationRules/From_date_should_be_less_than_To_date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_date_should_be_less_than_To_date</fullName>
    <active>true</active>
    <errorConditionFormula>From__c  &gt;  To__c</errorConditionFormula>
    <errorMessage>From date should be less than To date</errorMessage>
</ValidationRule>