force-app/main/default/objects/Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Other_Degree_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Other_Institute_School__c</columns>
    <columns>Other_Country__c</columns>
    <columns>Other_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>